Improve sizing for Firefox scrollable popup
Fixed width on the popup body can cause horizontal scrollbars due to incorrect dimensions calculation

See bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1395025

Instead, set desired width on activity element, and allow to be shrinkable (when vertical scrollbars are present, in Firefox only)

--- a/popup.css
+++ b/popup.css
@@ -3,7 +3,7 @@
  */
 
 body {
-	width: 340px;
+	max-width: 350px;
 }
 
 /*
@@ -74,7 +74,8 @@ body {
 .stream__login-activity {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
+	flex-shrink: 1;
+	width: 240px;
 }
 
 .stream__login {
