--- a/common.css
+++ b/common.css
@@ -104,6 +104,10 @@ button {
 	cursor: pointer;
 }
 
+button:active {
+	background-color: var(--sl-button-background-color-active);
+}
+
 button:focus,
 button:hover {
 	background-color: var(--sl-button-background-color-focus);
