--- a/common.css
+++ b/common.css
@@ -31,6 +31,7 @@
 	--sl-scheme-light-border-color: #ccc;
 	--sl-scheme-light-font-color: #212529;
 	--sl-scheme-light-font-color-faded: #495057;
+	--sl-scheme-light-tab-panel-background-color: #fff;
 	--sl-scheme-dark-background-color: #323234;
 	--sl-scheme-dark-button-background-color: #424242;
 	--sl-scheme-dark-button-background-color-focus: #4a4a4f;
@@ -40,6 +41,7 @@
 	--sl-scheme-dark-border-color: #292a2d;
 	--sl-scheme-dark-font-color: #e8eaed;
 	--sl-scheme-dark-font-color-faded: #d2d2d2;
+	--sl-scheme-dark-tab-panel-background-color: #292929;
 
 	/* Color scheme defaults */
 	--sl-background-color: var(--sl-scheme-light-background-color);
@@ -51,6 +53,7 @@
 	--sl-border-color: var(--sl-scheme-light-border-color);
 	--sl-font-color: var(--sl-scheme-light-font-color);
 	--sl-font-color-faded: var(--sl-scheme-light-font-color-faded);
+	--sl-tab-panel-background-color: var(--sl-scheme-light-tab-panel-background-color);
 
 	/* Provider-specific */
 	--sl-provider-twitch-background: #9145ff;
@@ -68,6 +71,7 @@
 		--sl-border-color: var(--sl-scheme-dark-border-color);
 		--sl-font-color: var(--sl-scheme-dark-font-color);
 		--sl-font-color-faded: var(--sl-scheme-dark-font-color-faded);
+		--sl-tab-panel-background-color: var(--sl-scheme-dark-tab-panel-background-color);
 	}
 }
 
@@ -285,6 +289,42 @@ input {
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
+}
+
+/*
+ * Tab Panels
+ */
+
+.tab-panels__tabs-list {
+	margin-bottom: -1px;
+}
+
+.tab-panels__tab-button {
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.tab-panels__tab-button[aria-selected='true'] {
+	background-color: var(--sl-tab-panel-background-color);
+	border-bottom-color: var(--sl-tab-panel-background-color);
+}
+
+/*
+ * Tab Panel
+ */
+
+.tab-panel {
+	display: none;
+	padding: 12px;
+	background-color: var(--sl-tab-panel-background-color);
+	border: 1px solid var(--sl-input-border-color);
+	border-radius: 6px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.tab-panel.tab-panel--active {
+	display: block;
 }
 
 /*
